Fixed some minor UI issues (table width, banner and banner img height) and added some media queries to change size and visibility of elements

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -5,11 +5,11 @@
   left: 0rem;
   bottom: 0rem;
   background: #ddcdd1;
-  min-width: 15%;
+  min-width: 13%;
   display: flex;
   flex-direction: column;
   box-shadow: 5px 10px 21px -6px #5b525a;
-  min-height: 100%;
+  /* min-height: 100vh; */
 }
 .sidebar-items {
   /* width: 100%; */
