--- a/src/components/Tables/InstructorSetupTable.css
+++ b/src/components/Tables/InstructorSetupTable.css
@@ -25,6 +25,10 @@ tbody tr {
   font-weight: bold !important;
 }
 
+.expertise-header {
+  /* padding-right: 0rem !important; */
+}
+
 .list-items-discipline-areas {
   display: flex;
   flex-direction: row;
